// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > renders correctly with class 1`] = `
<div>
  <div
    class="data-disabled:opacity-75 w-64"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-42"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-42"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with disabled 1`] = `
<div>
  <div
    class="data-disabled:opacity-75"
    data-disabled="true"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-42"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-disabled="true"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-42"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-disabled="true"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size lg 1`] = `
<div>
  <div
    class="data-disabled:opacity-75"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-46"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-46"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size md 1`] = `
<div>
  <div
    class="data-disabled:opacity-75"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-42"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-42"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size sm 1`] = `
<div>
  <div
    class="data-disabled:opacity-75"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-38"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-38"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with ui 1`] = `
<div>
  <div
    class="data-disabled:opacity-75"
    data-slot="root"
    data-v-0d9dad41=""
  >
    <div
      class="flex gap-4"
      data-slot="picker"
      data-v-0d9dad41=""
    >
      <div
        class="relative touch-none size-42 rounded-lg"
        data-slot="selector"
        data-v-0d9dad41=""
      >
        <div
          class="absolute inset-0 rounded-md"
          data-slot="selectorBackground"
          data-v-0d9dad41=""
          style="background-color: rgb(255, 0, 0);"
        />
        <div
          class="absolute inset-0 rounded-md"
          data-color-picker-selector=""
          data-slot="selectorBackground"
          data-v-0d9dad41=""
        />
        <div
          class="absolute size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="selectorThumb"
          data-v-0d9dad41=""
          style="left: 100%; top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
      <div
        class="relative w-2 touch-none rounded-md h-42"
        data-color-picker-track=""
        data-slot="track"
        data-v-0d9dad41=""
      >
        <div
          class="absolute left-1/2 size-4 -translate-1/2 cursor-pointer rounded-full ring-2 ring-white data-disabled:cursor-not-allowed"
          data-slot="trackThumb"
          data-v-0d9dad41=""
          style="top: 0%; background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;
